Setting prop in proplist rather than just prop object