@@ -28,7 +28,7 @@ import org.json.JSONObject;
  */
 
 public class PropList extends ListFragment implements Serializable {
-//need set and get groupID and password
+    //need set and get groupID and password
     private String groupID;
     private String password;
     private Date lastUpdatedTime;
@@ -106,16 +106,16 @@ public class PropList extends ListFragment implements Serializable {
         props.add(prop);
     }
 
-    public Prop getProp(PropList otherList, String addr) {
+    public int getProp(PropList otherList, String addr) {
         props.addAll(otherList.props);
         for (int i = 0; i < props.size(); i++) {
             if(props.get(i) != null) {
                 Prop prop = props.get(i);
                 if (prop.getAddr().equals(addr))
-                    return prop;
+                    return i;
             }
         }
-        return null;
+        return 0;
     }
 
     public void deleteProp(PropList otherList, String addr) {
@@ -145,7 +145,7 @@ public class PropList extends ListFragment implements Serializable {
 
     public Prop getProp(Long id){
         for(int i = 0; i < this.props.size(); i++){
-            if (props.get(i).getId() == id){
+            if (props.get(i).getId().equals(id)){
                 return props.get(i);
             }
         }
@@ -155,7 +155,7 @@ public class PropList extends ListFragment implements Serializable {
     public void updateProp(JSONObject entity){
         for(int i = 0; i< this.props.size(); i++){
             try {
-                if(props.get(i).getId() == new Long((String)entity.get("id"))){
+                if(props.get(i).getId().equals(Long.valueOf((String)entity.get("data")))){
                     props.add(i, new Prop(entity, groupID, password));
                     return;
                 }
